--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -76,6 +76,13 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="pull-left">
+                <button type="button" id="Beneficiarios" onclick="openBeneficiariosModal()" class="btn btn-default">Beneficiários</button>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-lg-12">
@@ -85,6 +92,79 @@
             </div>
         </div>
     </div>
-
-
 </form>
+
+<!-- desculpa pela bagunça, tempo bem curto. por algum motivo o bootstrap não tá aplicando o pt-5 que desejo ali na div do button-->
+<style>
+    .custom-pt {
+        padding-top: 26px !important;
+    }
+</style>
+
+<div class="modal fade" id="beneficiariosModal" tabindex="-1" role="dialog" aria-labelledby="beneficiariosModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="beneficiariosModalLabel">Beneficiários</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group row">
+                    <div class="col-md-4">
+                        <label for="cpf">CPF:</label>
+                        <input type="text" class="form-control" id="cpf">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="nome">Nome:</label>
+                        <input type="text" class="form-control" id="nome">
+                    </div>
+                    <div class="pt-4 col-md-4">
+                        <button type="button" class="btn btn-sm btn-success" onclick="incluirBeneficiario()">Incluir</button>
+                    </div>
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>CPF</th>
+                            <th>Nome</th>
+                        </tr>
+                    </thead>
+                    <tbody id="beneficiariosGrid">
+                        <!-- Beneficiários serão adicionados aqui -->
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    function openBeneficiariosModal() {
+        $('#beneficiariosModal').modal('show');
+    }
+
+    function incluirBeneficiario() {
+        var cpf = $('#cpf').val();
+        var nome = $('#nome').val();
+
+        if ($('#beneficiariosGrid tbody').length == 0) {
+            $('#beneficiariosGrid').append('<tbody></tbody>');
+        }
+
+        $('#beneficiariosGrid tbody').append(
+            $('<tr>').append(
+                $('<td>').text(nome),
+                $('<td>').text(cpf)
+            )
+        );
+
+        $('#cpf').val('');
+        $('#nome').val('');
+
+    }
+</script>
