--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -83,6 +83,7 @@
             </div>
         </div>
     </div>
+    <input type="hidden" for="" id="id" name="id" /> 
 
     <div class="row">
         <div class="col-lg-12">
@@ -92,57 +93,58 @@
             </div>
         </div>
     </div>
+    <style>
+        .custom-pt {
+            padding-top: 26px !important;
+        }
+    </style>
+
+    <div class="modal fade" id="beneficiariosModal" tabindex="-1" role="dialog" aria-labelledby="beneficiariosModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="beneficiariosModalLabel">Beneficiários</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group row">
+                        <div class="col-md-4">
+                            <label for="cpf">CPF:</label>
+                            <input type="text" class="form-control" id="cpfModal">
+                        </div>
+                        <div class="col-md-4">
+                            <label for="nome">Nome:</label>
+                            <input type="text" class="form-control" id="nomeModal">
+                        </div>
+                        <div class="col-md-4 custom-pt">
+                            <button type="button" class="btn btn-sm btn-success" onclick="incluirBeneficiario()">Incluir</button>
+                        </div>
+                    </div>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>CPF</th>
+                                <th>Nome</th>
+                            </tr>
+                        </thead>
+                        <tbody id="beneficiariosGrid">
+                            <!-- Beneficiários serão adicionados aqui -->
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </form>
 
 <!-- desculpa pela bagunça, tempo bem curto. por algum motivo o bootstrap não tá aplicando o pt-5 que desejo ali na div do button
     e não consigo criar um helpers.js e exportá-los pra modularizar o código, repeti bastante coisa-->
-<style>
-    .custom-pt {
-        padding-top: 26px !important;
-    }
-</style>
 
-<div class="modal fade" id="beneficiariosModal" tabindex="-1" role="dialog" aria-labelledby="beneficiariosModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="beneficiariosModalLabel">Beneficiários</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="form-group row">
-                    <div class="col-md-4">
-                        <label for="cpf">CPF:</label>
-                        <input type="text" class="form-control" id="cpfModal">
-                    </div>
-                    <div class="col-md-4">
-                        <label for="nome">Nome:</label>
-                        <input type="text" class="form-control" id="nome">
-                    </div>
-                    <div class="col-md-4 custom-pt">
-                        <button type="button" class="btn btn-sm btn-success" onclick="incluirBeneficiario()">Incluir</button>
-                    </div>
-                </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>CPF</th>
-                            <th>Nome</th>
-                        </tr>
-                    </thead>
-                    <tbody id="beneficiariosGrid">
-                        <!-- Beneficiários serão adicionados aqui -->
-                    </tbody>
-                </table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 <script>
     function openBeneficiariosModal() {
@@ -151,7 +153,7 @@
 
     function incluirBeneficiario() {
         var cpfModal = $('#cpfModal').val();
-        var nome = $('#nome').val();
+        var nomeModal = $('#nomeModal').val();
 
         if ($('#beneficiariosGrid tbody').length == 0) {
             $('#beneficiariosGrid').append('<tbody></tbody>');
@@ -160,12 +162,12 @@
         $('#beneficiariosGrid tbody').append(
             $('<tr>').append(
                 $('<td>').text(cpfModal),
-                $('<td>').text(nome)
+                $('<td>').text(nomeModal)
             )
         );
 
         $('#cpfModal').val('');
-        $('#nome').val('');
+        $('#nomeModal').val('');
 
     }
 </script>
